--- a/index.html
+++ b/index.html
@@ -20,7 +20,18 @@
   </head>
   <body>
 
-
+    <div class="container">
+      <div class="searchbox">
+        <div>
+          <img class="search_icon" src="./img/search.png" alt="...">
+        </div>
+        <input type="text">
+        <div class="tooltip">
+          <img class="image_icon" src="./img/camera.png" alt="...">
+          <span class="tooltiptext">Busca por imagem</span>
+        </div>
+      </div>
+    </div>
 
 <!--JS-->
 <script src="js/script.js" type="text/javascript"></script>
