--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Caixa de pesquisa do Google</title>
+    <title>Menu - CSS Tab</title>
 
     <!-- Fontawesome Icones -->
     <script src="https://kit.fontawesome.com/7c8801c017.js" crossorigin="anonymous"></script>
@@ -20,18 +20,6 @@
   </head>
   <body>
 
-    <div class="container">
-      <div class="searchbox">
-        <div>
-          <img class="search_icon" src="./img/search.png" alt="...">
-        </div>
-        <input type="text">
-        <div class="tooltip">
-          <img class="image_icon" src="./img/camera.png" alt="...">
-          <span class="tooltiptext">Busca por imagem</span>
-        </div>
-      </div>
-    </div>
 
 <!--JS-->
 <script src="js/script.js" type="text/javascript"></script>
